--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry Monster</title>
+    <link rel="stylesheet" href="./style.css">
  <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
     <form class="col-md-6 m-auto py-5">
         <div class="input-group mb-3">
-            <input type="text" id="search-menu" class="form-control" placeholder="Enter a location for Weather ...">
+            <input type="text" id="search-menu" class="form-control" placeholder="Enter Meal Category">
             <div class="input-group-append">
                 <button type="button" class="btn btn-danger" onclick="searchButton()">Search</button>
             </div>
         </div>
     </form>
-    <div id="menu-list">
-       <div id="food-list"></div>
+    <div id="ingredient-list" class="d-flex justify-content-center mb-5"></div>
+    <div id="menu-list" class="container">
     </div>
     <script src="script.js"></script>
 </body>
