--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             </div>
         </div>
     </form>
+    <div>
+        <h1 id="error"></h1>
+    </div>
     <div id="ingredient-list" class="d-flex justify-content-center mb-5"></div>
     <div id="menu-list" class="container">
     </div>
